# splitflap

./: .gitignore  .gitmodules
3d/: splitflap.scad
arduino/: CMakeLists.txt
arduino/splitflap/: .syntastic_c_config_file  CMakeLists.txt  acceleration.h  bell.h  generate_acceleration.py  spi_io_config.h  splitflap.cpp  splitflap.ino  splitflap_module.h
software/: Pipfile  demo.py  splitflap.py  transport.py  web.py
software/service/: message_formatter.py  web.py
software/splitflap/: splitflap.py
software/tests/: message_formatter_test.py
software/webapp/: package-lock.json  package.json
software/webapp/src/: App.js
